# CMakeTemplate

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yaml
include/: cin_ignore.h  filesystem.h
src/: chcp.cpp  chcp.h  cin_ignore.cpp  filesystem.cpp
